--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "@toast-ui/vue-grid": "^4.21.4",
     "ckeditor4-vue": "^1.4.0",
     "core-js": "^3.15.1",
     "material-design-icons-iconfont": "^6.1.1",
