--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "material-design-icons-iconfont": "^6.1.1",
     "nuxt": "^2.12.2",
     "object-to-formdata": "^4.4.1",
-    "tabulator-tables": "^4.8.1"
+    "vue-router-tab": "^1.2.11"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
