--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@toast-ui/vue-grid": "^4.21.4",
+    "bootstrap": "^5.2.1",
     "ckeditor4-vue": "^1.4.0",
     "core-js": "^3.15.1",
     "material-design-icons-iconfont": "^6.1.1",
