--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/auth-next": "^5.0.0-1637745161.ea53f98",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/i18n": "^7.3.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@toast-ui/vue-grid": "^4.21.4",
     "bootstrap": "^5.2.1",
