--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,4 @@
-API_SERVER=http://localhost:8080
+API_SERVER=http://192.168.100.107:8080
 
 CDN_STATIC=/
 CDN_ASSETS=/_nuxt/
-CDN_IMAGE=http://localhost:8080/images
