--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "material-design-icons-iconfont": "^6.1.1",
     "nuxt": "^2.12.2",
     "object-to-formdata": "^4.4.1",
+    "vee-validate": "^3.4.14",
     "vue-router-tab": "^1.2.11"
   },
   "devDependencies": {
