--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@toast-ui/vue-editor": "^3.2.2",
     "@toast-ui/vue-grid": "^4.21.4",
     "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
     "ckeditor4-vue": "^1.4.0",
     "codemirror": "^6.0.1",
     "core-js": "^3.15.1",
