--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build.dev": "cross-env NODE_ENV=development nuxt build --dotenv .env.development",
     "build": "cross-env  NODE_ENV=production nuxt build --dotenv .env.production",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js",
+    "dev": "cross-env NODE_ENV=development nuxt start --dotenv .env.development",
+    "start": "cross-env  NODE_ENV=production nuxt start --dotenv .env.production",
+    "generate.dev": "cross-env  NODE_ENV=development nuxt generate --dotenv .env.development",
+    "generate": "cross-env  NODE_ENV=production nuxt generate --dotenv .env.production"
   },
   "dependencies": {
     "@nuxtjs/auth-next": "^5.0.0-1637745161.ea53f98",
