--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "generate": "cross-env  NODE_ENV=production nuxt generate --dotenv .env.production"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-vue2": "^3.0.1",
     "@nuxtjs/auth-next": "^5.0.0-1637745161.ea53f98",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
