--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "generate": "cross-env  NODE_ENV=production nuxt generate --dotenv .env.production"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
-    "@ckeditor/ckeditor5-vue2": "^3.0.1",
     "@nuxtjs/auth-next": "^5.0.0-1637745161.ea53f98",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
@@ -25,6 +23,7 @@
     "@toast-ui/vue-grid": "^4.21.7",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "ckeditor4-vue": "^2.3.0",
     "codemirror": "^6.0.1",
     "core-js": "^3.15.1",
     "material-design-icons-iconfont": "^6.1.1",
