ckeditor5 및 plugin 추가

--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "generate": "cross-env  NODE_ENV=production nuxt generate --dotenv .env.production"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-dev-utils": "^35.0.5",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^31.1.13",
+    "@ckeditor/ckeditor5-editor-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-source-editing": "^36.0.1",
+    "@ckeditor/ckeditor5-theme-lark": "^36.0.1",
+    "@ckeditor/ckeditor5-vue2": "^3.0.1",
     "@nuxtjs/auth-next": "^5.0.0-1637745161.ea53f98",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
@@ -27,7 +34,10 @@
     "codemirror": "^6.0.1",
     "core-js": "^3.15.1",
     "material-design-icons-iconfont": "^6.1.1",
-    "nuxt": "^2.12.2",
+    "postcss-loader": "^4.3.0",
+    "postcss": "^8.1.9",
+    "raw-loader": "^0.5.1",
+    "nuxt": "^2.15.7",
     "object-to-formdata": "^4.4.1",
     "vee-validate": "^3.4.14",
     "vue-router-tab": "^1.2.11",
