--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@ckeditor/ckeditor5-source-editing": "^36.0.1",
     "@ckeditor/ckeditor5-theme-lark": "^36.0.1",
     "@ckeditor/ckeditor5-vue2": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
     "@nuxtjs/auth-next": "^5.0.0-1637745161.ea53f98",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
@@ -34,11 +37,11 @@
     "codemirror": "^6.0.1",
     "core-js": "^3.15.1",
     "material-design-icons-iconfont": "^6.1.1",
-    "postcss-loader": "^4.3.0",
-    "postcss": "^8.1.9",
-    "raw-loader": "^0.5.1",
     "nuxt": "^2.15.7",
     "object-to-formdata": "^4.4.1",
+    "postcss": "^8.1.9",
+    "postcss-loader": "^4.3.0",
+    "raw-loader": "^0.5.1",
     "vee-validate": "^3.4.14",
     "vue-router-tab": "^1.2.11",
     "vue2-datepicker": "^3.11.0"
