--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/i18n": "^7.3.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@toast-ui/vue-grid": "^4.21.7",
+    "@types/splitpanes": "^2.2.1",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
     "codemirror": "^6.0.1",
@@ -37,6 +38,7 @@
     "postcss": "^8.1.9",
     "postcss-loader": "^4.3.0",
     "raw-loader": "^0.5.1",
+    "splitpanes": "^2.4.1",
     "vee-validate": "^3.4.14",
     "vue-router-tab": "^1.2.11",
     "vue2-datepicker": "^3.11.0"
